<resources>
    <string name="app_name">Bookva</string>
    <string name="action_settings">Settings</string>
    <string name="search">Поиск</string>>
    <string name="login">Вход</string>
    <string name="username">Имя пользователя</string>
    <string name="feed">Лента</string>
    <string name="logout">Выход</string>
    <string name="account">Аккаунт</string>
    <string name="authorization_error">Ошибка авторизации</string>>
    <string name="authorization_success">Авторизация прошла успешно</string>>
    <string name="authorization_wrong_password">Неправильный логин или пароль</string>>

    <string name="hint_email">Email</string>
    <string name="hint_password">Пароль</string>
    <string name="btn_login">Вход</string>
    <string name="btn_register">Регистрация</string>
    <string name="btn_link_to_register">Нет акаунта? Зарегиструйтесь</string>
    <string name="btn_link_to_login">Уже зарегистрированы? Войдите</string>

      <string name="cheese_ipsum">Jarlsberg lancashire edam. Dolcelatte hard cheese brie st. agur blue
    cheese caerphilly bavarian bergkase cheese and biscuits mascarpone. Cheeseburger swiss bavarian
    bergkase cream cheese fromage frais cheesy feet port-salut airedale. St. agur blue cheese rubber
    cheese caerphilly cheddar cheesecake cream cheese manchego lancashire. Roquefort squirty cheese
    the big cheese.</string>
    <string name="description">Описание</string>
    <string name="extract">Отрывок</string>
    <string name="text_value">Текст</string>
    <string name="author">Автор</string>
    <string name="authors">Авторы</string>
</resources>
