<?xml version="1.0" encoding="utf-8"?><!--
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_centerInParent="true">

    <data>
        <variable
            name="viewModel"
            type="com.bsuir.kloop1996.bookva.viewmodel.AuthorizationViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

    <LinearLayout
        android:id="@+id/layout_login"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:orientation="vertical"
        >

        <EditText
            android:id="@+id/edtLat"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="10dp"
            android:text="@{viewModel.loginField}"
            app:addTextChangedListener="@{viewModel.loginEditTextWatcher}"
            />

        <EditText
            android:id="@+id/edtLong"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:text="@{viewModel.passwordField}"
            app:addTextChangedListener="@{viewModel.passwordEditTextWatcher}"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="125dp"
            android:layout_marginRight="125dp"
            android:text="@string/login"
            android:onClick="@{viewModel.onClickLogin}"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_auth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        app:visibility="@{viewModel.progressVisibility}"/>

    </RelativeLayout>
</layout>-->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_centerInParent="true"
    android:orientation="vertical">

    <data>

        <variable
            name="viewModel"
            type="com.bsuir.kloop1996.bookva.viewmodel.AuthorizationViewModel" />
    </data>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/bg_login"
        android:gravity="center"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/emailEdit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_login_hint"
                android:text="@{viewModel.loginField}"
                app:addTextChangedListener="@{viewModel.loginEditTextWatcher}"/>

            <EditText
                android:id="@+id/loginEdit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:hint="@string/username"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_login_hint"
                android:text="@{viewModel.loginField}"
                app:addTextChangedListener="@{viewModel.loginEditTextWatcher}"/>


            <EditText
                android:id="@+id/passwordEdit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_login_hint"
                android:text="@{viewModel.passwordField}"
                app:addTextChangedListener="@{viewModel.passwordEditTextWatcher}"/>

            <!-- Login Button -->

            <Button
                android:id="@+id/registerButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:background="@color/btn_login_bg"
                android:text="@string/btn_register"
                android:textColor="@color/btn_login"
                android:onClick="@{viewModel.onClickLogin}"/>

            <!-- Link to Login Screen -->

            <Button
                android:id="@+id/btnLinkToRegister"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dip"
                android:background="@null"
                android:text="@string/btn_link_to_login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15sp" />
        </LinearLayout>

    </LinearLayout>

</layout>